Doc de endpoint eliminacion de producto de carrito y se agregar btn en view cart
